Successfully built the security system